feat: Initial successful execution of the simulation in 1404-07-22 at 18:38

--- a/config.ini
+++ b/config.ini
@@ -1,42 +1,33 @@
-; =============================================
-; فایل تنظیمات اصلی برای شبیه‌ساز SkyMind
-; =============================================
+[simulation]
+# ابعاد دنیای شبیه‌سازی (تعداد خانه‌های گرید)
+width = 50
+height = 30
+# مسیر فایل نقشه که موانع و نقاط شروع از آن خوانده می‌شود
+# نقشه simple_map.json شامل 3 پهپاد و چند مانع است.
+map_file = data/maps/simple_map.json
+# تعداد پهپادها (این مقدار فقط زمانی استفاده می‌شود که نقشه فاقد اطلاعات پهپاد باشد)
+num_drones = 3
+
+[renderer]
+# ابعاد پنجره نمایش بر حسب پیکسل
+screen_width = 1280
+screen_height = 800
+# اندازه هر خانه گرید بر حسب پیکسل
+cell_size = 20
+# فریم بر ثانیه (سرعت اجرای شبیه‌سازی و نمایش)
+fps = 30
+# مسیر فایل فونت برای نمایش متن (فونت وزیرمتن برای فارسی مناسب است)
+font_path = assets/fonts/Vazirmatn-Regular.ttf
+font_size = 18
 
 [logging]
-; سطح لاگ: DEBUG, INFO, WARNING, ERROR, CRITICAL
-level = INFO
-file = data/simulation_logs/sim_run.log
-format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
+# نام فایل لاگ
+log_file = data/simulation_logs/sim_run.log
+# سطح لاگ‌برداری (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+log_level = INFO
 
-[window]
-title = SkyMind Drone Simulator
-width = 1200
-height = 800
-fps = 60
-; AliceBlue
-bg_color = 240, 248, 255
-
-[grid]
-; اندازه هر سلول گرید به پیکسل
-cell_size = 40
-line_color = 200, 200, 200
-
-[simulation]
-; مدت زمان شبیه‌سازی به ثانیه. برای اجرای نامحدود، یک عدد بزرگ قرار دهید
-duration = 120
-
-; تعریف پهپادها و موانع به صورت رشته متنی
-; این رشته‌ها بعداً در کد به ساختار داده‌ای پایتون تبدیل می‌شوند
-drones = [{"start_position": [60, 60], "goal_position": [1100, 700]}]
-obstacles = [{"top_left": [200, 160], "size": [40, 400]}, {"top_left": [400, 400], "size": [480, 40]}, {"top_left": [800, 100], "size": [40, 200]}]
-
-[assets]
-font_path = assets/fonts/Vazirmatn-Regular.ttf
-font_size = 16
-drone_image_path = assets/images/drone.png
-drone_icon_size = 30, 30
-
-[pathfinding]
-; Red
-path_color = 255, 0, 0
-path_width = 2
+[drone_properties]
+# سرعت حرکت پهپاد (واحد گرید در ثانیه)
+speed = 5.0
+# مدل باتری
+battery_model = basic
