--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Python virtual environment
 venv/
+/venv/
 *.pyc
 __pycache__/
+
+# Log files
+*.log
+data/simulation_logs/
+
+# IDE and OS specific files
+.vscode/
+.idea/
+.DS_Store
+
+# Build artifacts
+dist/
+build/
+*.egg-info/
