--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+arabic-reshaper==3.0.0
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
+ffmpeg-python==0.2.0
 fonttools==4.60.0
+future==1.0.0
+git-filter-repo==2.47.0
 iniconfig==2.1.0
 kiwisolver==1.4.9
 llvmlite==0.45.1
@@ -9,13 +13,16 @@ matplotlib==3.10.6
 numba==0.62.1
 numpy==2.3.3
 packaging==25.0
+persiantools==5.4.0
 pillow==11.3.0
 pluggy==1.6.0
 pygame==2.6.1
 Pygments==2.19.2
 pyparsing==3.2.5
 pytest==8.4.2
+python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 PyYAML==6.0.3
 six==1.17.0
 -e git+https://github.com/reza-226/SkyMind_Sim.git@bd76dd2a495c96985983e850ece1cf8eb2583bf4#egg=skymind_sim
+tzdata==2025.2
