Feat: Implement and debug visual simulation loop
Successfully integrated Pygame for visualization. The simulation now runs, displays the grid, obstacles, and moving drones. Key fixes include asset loading order, data type consistency between simulation and renderer layers, and event handling. The application is now in a stable, runnable state. *****  1404-07-24  at 14:37 ******

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,6 @@ python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 PyYAML==6.0.3
 six==1.17.0
--e git+https://github.com/reza-226/SkyMind_Sim.git@bd76dd2a495c96985983e850ece1cf8eb2583bf4#egg=skymind_sim
+typing_extensions==4.15.0
 tzdata==2025.2
+-e .
